// src/main/scala/it/unibo/model/gameboard/grid/GridDefinitions.scala
package it.unibo.model.gameboard.grid

object GridDefinitions:
  export GridBuilder.DSL.*
  def standard: Grid = Grid:
    T | T | T | F | F | F | F | F | F | F | F | F | F | T | T | T
    T | T | T | F | F | F | F | F | F | F | F | F | F | T | T | T
    T | T | T | F | F | F | F | F | F | F | F | F | F | T | T | T
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | E | E | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | E | E | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    T | T | T | F | F | F | F | F | F | F | F | F | F | T | T | T
    T | T | T | F | F | F | F | F | F | F | F | F | F | T | T | T
    T | T | T | F | F | F | F | F | F | F | F | F | F | T | T | T

  def endGame: Grid = Grid:
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | E | E | E | E | F | F | E | E | E | E | F | F | F
    F | F | F | F | F | F | E | F | F | F | E | F | F | F | F | F
    F | F | F | F | F | F | E | F | F | F | F | E | F | F | F | F
    F | F | F | E | E | E | E | F | F | E | E | E | E | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | E | E | E | E | F | F | E | E | E | E | F | F | F
    F | F | F | E | F | F | E | F | F | E | F | F | E | F | F | F
    F | F | F | E | E | E | E | F | F | E | E | E | E | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
    F | F | F | E | F | F | F | F | F | E | E | E | F | F | F | F
    F | F | F | F | E | F | F | F | F | F | F | F | E | F | F | F
    F | F | F | F | F | E | E | F | F | E | E | E | F | F | F | F
    F | F | F | F | E | F | F | F | F | F | F | F | E | F | F | F
    F | F | F | E | F | F | F | F | F | E | E | E | F | F | F | F
    F | F | F | F | F | F | F | F | F | F | F | F | F | F | F | F
